tests/sksl/errors/golden/ConstructorArgumentCount.glsl
### Compilation failed:

error: 1: invalid arguments to 'float3' constructor (expected 3 scalars, but found 2)
error: 2: invalid arguments to 'float3' constructor (expected 3 scalars, but found 4)
error: 3: invalid argument to 'bool' constructor (expected a number or bool, but found 'int3')
3 errors
